[gd_scene load_steps=3 format=3 uid="uid://dpu5cnkudc0lq"]

[ext_resource type="Script" uid="uid://fcb2oypt8l5n" path="res://scripts/victory_screen.gd" id="1_1hy6p"]
[ext_resource type="Texture2D" uid="uid://dssexkxo2pixv" path="res://assets/hud/button.png" id="2_wdgif"]

[node name="VictoryScreen" type="Node"]
script = ExtResource("1_1hy6p")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.05, 0.15, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Button" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(648, 431.99997)
scale = Vector2(1.425, 1.2179487)
texture = ExtResource("2_wdgif")

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="WinnerLabel" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "¡JUGADOR X GANA!"
horizontal_alignment = 1

[node name="MenuButton" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "VOLVER AL MENÚ"

[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
